--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "highcharts": "^8.0.0",
+    "highcharts-react-official": "^2.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-jsx-highcharts": "^4.0.1",
     "react-scripts": "3.3.1"
   },
   "scripts": {
